# AccessRepositoryChecker

./: CMakeLists.txt  README.md  main.cpp
src/DirectoryAccessChecker/: AccessResult.h  DirectoryAccessChecker.cpp  DirectoryAccessChecker.h
src/DirectoryAccessChecker/Utils/: DirectoryAccessCheckerUtils.cpp  DirectoryAccessCheckerUtils.h
src/FileDirectoryUtils/: FileDirectoryUtils.cpp  FileDirectoryUtils.h
src/FileDirectoryUtils/DirectoryPermissions/: Permissions.h
src/TerminalUtils/: TerminalUtils.cpp  TerminalUtils.h
